# flowplane

./: .clippy.toml  .dockerignore  .env.example  .gitguardian.yml  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Containerfile.eval  Containerfile.release  DECISIONS.md  DOCKER.md  Dockerfile  Dockerfile.backend  Dockerfile.cli  Dockerfile.ui  FILTER_COVERAGE_AUDIT.md  FLOWPLANE_CAPABILITIES.md  GITHUB_ISSUE_API_DEFINITIONS_REMOVAL.md  IMPLEMENTATION_PLAN_API_DEFINITIONS_REMOVAL.md  LICENSE-PENDING.md  MONITORING_SETUP.md  Makefile  NOTICE  PROGRESS.md  QUESTIONS.md  README-DOCKER.md  README.md  RELEASE_NOTES_v0.0.1.md  RELEASE_NOTES_v0.0.2.md  REWRITE-REPORT.md  TESTING-TASK-7.md  build.rs  compose.eval.yml  deny.toml  docker-compose-base.yml  docker-compose-dev.yml  docker-compose-envoy.yml  docker-compose-httpbin.yml  (+31 more)
crates/flowplane/: Cargo.toml
crates/flowplane-agent/: Cargo.toml  build.rs
crates/flowplane-agent/src/: agent.rs  backoff.rs  client.rs  config.rs  config_dump.rs  dedup.rs  main.rs  queue.rs
crates/flowplane-agent/tests/: agent_integration.rs
crates/flowplane-rls/: Cargo.toml
crates/flowplane-rls/src/: admin.rs  config.rs  counter.rs  grpc.rs  lib.rs  main.rs  policy.rs  server.rs
crates/flowplane-rls/tests/: admin_auth.rs  boot_smoke.rs  grpc_mtls.rs  server.rs
crates/flowplane/src/: cli.rs  main.rs  paths.rs  serve.rs
crates/flowplane/src/cli/: client.rs  commands.rs  config.rs  confirm.rs  mod.rs  output.rs  schema.rs
crates/flowplane/templates/dashboard/: ai.html  ai_overview.html  ai_traces.html  apis.html  apis_detail.html  apis_list.html  auth_expired.html  learning.html  learning_content.html  learning_sessions.html  mcp.html  mcp_status.html  mcp_tools.html  (+12 more)
crates/flowplane/tests/: api_spec_versions_smoke.rs  cli_ai_provider_auth_scheme.rs  cli_ai_retention.rs  cli_ai_trace.rs  cli_api_spec.rs  cli_dashboard_ai.rs  cli_dashboard_apis.rs  cli_dashboard_container_profile.rs  cli_dashboard_filters.rs  cli_dashboard_learning.rs  cli_dashboard_mcp.rs  cli_dashboard_orphans.rs  cli_dashboard_overview.rs  cli_dashboard_rate_limits.rs  cli_dashboard_resources.rs  cli_dashboard_secrets.rs  cli_dashboard_security.rs  cli_dashboard_topology.rs  cli_s1_conformance.rs  cli_s1_envelope_kind.rs  cli_s2_error_model.rs  cli_s3_auth_login_token_source.rs  cli_s3_config_precedence.rs  cli_s4_revision_rmw.rs  cli_s5_schema_fields.rs  cli_s6_confirm.rs  cli_s7_coverage.rs  paths_s1_private_token_files.rs  paths_s2_default_dev_token_sink.rs  paths_s3_bootstrap_token_file.rs  paths_s4_cli_dev_token_fallback.rs
crates/fp-agent/: Cargo.toml
crates/fp-agent/src/: main.rs
crates/fp-api/: Cargo.toml
crates/fp-api/src/: ai_api.rs  api_lifecycle_api.rs  auth.rs  dataplanes_api.rs  discovery_api.rs  error.rs  expose_api.rs  extract.rs  identity_api.rs  learning_api.rs  lib.rs  mcp_api.rs  middleware.rs  orgs_api.rs  rate_limit_api.rs  resources.rs  route_generation_api.rs  routes.rs  secrets_api.rs  state.rs  throttle.rs  xds_api.rs
crates/fp-api/tests/: agent_auth.rs  ai_provider_auth_scheme.rs  api_bindings_tools.rs  api_crud.rs  api_list_enrichment.rs  egress_advisory_ai_api.rs  egress_advisory_api.rs  egress_advisory_expose_api.rs  mcp_ai_usage.rs  mcp_static_tools.rs  mcp_team_isolation.rs  mcp_tool_catalog.rs  mcp_transport.rs  org_get_scope.rs  org_member_removal_revokes_grants.rs  org_read_scope.rs  owner_kind_binding.rs  rate_limit_api.rs  router.rs  spec_content.rs  spec_review_events.rs  spec_versions_list.rs  team_grants_authz.rs
crates/fp-core/: Cargo.toml
crates/fp-core/src/: authz.rs  config.rs  dev.rs  lib.rs  mcp_declarations.rs  oidc.rs
crates/fp-core/tests/: ai_provider_origin_validation.rs  ai_provider_rematerialize.rs  ai_route_singletx.rs  ai_trace_service.rs  discovery.rs  egress_policy.rs  gateway.rs  gateway_owner_kind_matrix.rs  grant_revocation_across_tables.rs  listener_rate_limit_ref.rs  mcp_declarations_contract.rs  membership_removal_audit.rs  multi_org_any_team_authz.rs  oidc_ca_bundle.rs  publish_imported.rs  quotas.rs  rate_limit.rs  rls_push_auth.rs  rls_sync.rs  route_generation.rs  server_config.rs  tenancy.rs
crates/fp-domain/: Cargo.toml
crates/fp-domain/src/: ai.rs  api_lifecycle.rs  authz.rs  dataplane.rs  discovery.rs  error.rs  event.rs  id.rs  identity.rs  learning.rs  lib.rs  rate_limit.rs  route_generation.rs  secret.rs
crates/fp-domain/tests/: docs_release_blockers.rs  sse_stream_transform.rs
crates/fp-storage/: Cargo.toml
crates/fp-storage/migrations/: 0001_instance_meta.sql  0002_identity.sql  0003_outbox.sql  0004_clusters.sql  0005_listeners_route_configs.sql  0006_dataplanes.sql  0007_xds_nack_events.sql  0008_secrets.sql  0009_dataplane_telemetry.sql  0010_api_lifecycle.sql  0011_capture_sessions.sql  0012_raw_observations.sql  0013_api_retention_policy_default_unique.sql  0014_api_route_binding_unscoped_unique.sql  0015_dataplane_telemetry_idempotency.sql  0016_raw_observations_team_expiry_index.sql  0017_events_team_occurred_index.sql  0018_api_route_binding_vhost_unique.sql  0019_spec_version_lifecycle.sql  0020_discovery_sessions.sql  0021_discovery_raw_observations.sql  0022_route_generation_plans.sql  0023_ai_providers.sql  0024_ai_routes.sql  0025_ai_owned_gateway_resources.sql  0026_ai_usage_events.sql  0027_ai_budgets.sql  0028_agents_token_hash_unique.sql  0029_bootstrap_token_operator_seeded.sql  0030_rate_limit.sql  0031_ai_trace_events.sql  0032_ai_provider_auth_scheme.sql  0033_grant_referential_integrity.sql
crates/fp-storage/src/: lib.rs  outbox.rs  scope.rs  seed.rs
crates/fp-storage/tests/: ai_budget_state.rs  ai_budgets.rs  ai_shadow_budget.rs  ai_trace.rs  ai_trace_cursor.rs  ai_usage_window.rs  api_lifecycle.rs  audited_delete_paths.rs  discovery.rs  gateway_owner_kind.rs  grant_referential_integrity.rs  rate_limit.rs  retention.rs
crates/fp-xds/: Cargo.toml
crates/fp-xds/src/: ads.rs  capture.rs  diagnostics.rs  lib.rs  server.rs  snapshot.rs  translate.rs
crates/fp-xds/tests/: ads_mtls.rs  ads_stream.rs  snapshot_owner_kind_guard.rs
(+1490 files in other folders)
