[package]
name = "flowplane"
version = "0.0.14"
edition = "2021"

[dependencies]
# Core async runtime
tokio = { version = "1.47.1", features = ["full"] }
async-stream = "0.3"

# REST API framework
axum = { version = "0.8.4", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header", "cookie"] }
tower = "0.5.1"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
tower_governor = "0.8.0"

# Envoy xDS and protobuf - matched to PoC proven versions
envoy-types = "0.7.1"
tonic = { version = "0.14.0", features = ["tls-ring"] }
tonic-reflection = "0.14.0"
prost = "0.14.0"
prost-types = "0.14.0"
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = "0.7"

# Configuration and state management
serde = { version = "1.0.226", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9"
toml = "0.8"

openapiv3 = "1.0"
bytes = "1.6"
mime = "0.3"
hyper = "1.3"
http = "1.1"
http-body-util = "0.1"

# Storage and persistence
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "postgres", "sqlite", "json", "migrate", "chrono", "uuid"] }

# Authentication and security - aligned with PoC
jsonwebtoken = "9.3.1"
argon2 = "0.5"
futures = "0.3"
async-trait = "0.1"
bcrypt = "0.17"
ring = "0.17.14"
base64 = "0.22"
rand = "0.8"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
simple_asn1 = "0.6"
tokio-rustls = "0.26"
hyper-util = { version = "0.1", features = ["server", "client", "http1", "http2"] }
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

# Secrets management
vaultrs = { version = "0.7", default-features = false, features = ["rustls"] }

# Observability and monitoring - enhanced like PoC
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
tracing-appender = "0.2"
# OpenTelemetry SDK for distributed tracing with tracing crate bridge
opentelemetry = { version = "0.31.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio", "trace"] }
opentelemetry-otlp = { version = "0.31.0", features = ["default", "grpc-tonic", "trace"] }
opentelemetry-semantic-conventions = "0.31.0"
opentelemetry-stdout = { version = "0.31.0", features = ["trace"] }
tracing-opentelemetry = "0.32.0"
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
once_cell = "1.19"

# Error handling and validation
anyhow = "1.0"
thiserror = "2.0"
validator = { version = "0.20.0", features = ["derive"] }
lazy_static = "1.4"
jsonschema = "0.28"
dashmap = "6.1"

# Configuration and environment
config = "0.15"
clap = { version = "4.5.48", features = ["derive"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# X.509 certificate parsing for mTLS identity extraction
x509-parser = "0.16"

# Utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
time = "0.3.41"
regex = "1.10"
url = "2.5"
owo-colors = "3.5"
# API documentation
utoipa = { version = "5.4.0", features = ["macros", "chrono"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
num_cpus = "1.17.0"

[dev-dependencies]
tokio-test = "0.4"
axum-test = "16.4.0"
tracing-test = "0.2.5"
reserve-port = "2.3"
proptest = "1.5"
hyper-rustls = "0.27"
rcgen = { version = "0.13", default-features = false, features = ["pem", "ring"] }
tempfile = "3.14"
which = "6.0"
rustls-pemfile = "2.1"
criterion = { version = "0.5", features = ["async_tokio"] }
wiremock = "0.6"
# reqwest with cookies for e2e tests (overrides main dep for tests)
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "cookies"] }

[[bench]]
name = "token_repository"
harness = false
