[package]
name = "flowplane-agent"
version = "0.0.1"
edition = "2021"
description = "Flowplane dataplane-side diagnostics agent (warming failure detection)"
build = "build.rs"

[[bin]]
name = "flowplane-agent"
path = "src/main.rs"

[build-dependencies]
tonic-prost-build = "0.14.0"

[dependencies]
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = { version = "0.14.0", features = ["tls-ring", "transport"] }
tonic-prost = "0.14.0"
prost = "0.14.0"
prost-types = "0.14.0"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "http2"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"

[dev-dependencies]
axum = "0.8"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "sync", "time", "signal", "process", "net", "io-util"] }
tower = "0.5"
