[package]
name = "flowplane-rls"
description = "Flowplane first-party global rate-limit service (Envoy RateLimitService gRPC + CP policy-push admin)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "flowplane-rls"
path = "src/main.rs"

[lib]
name = "flowplane_rls"
path = "src/lib.rs"

[dependencies]
fp-domain = { workspace = true }
envoy-types = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tonic = { workspace = true }
tokio = { workspace = true }
envoy-types = { workspace = true }
serde_json = { workspace = true }
