[package]
name = "flowplane"
description = "Flowplane control plane and CLI binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true

[features]
default = ["dev-oidc"]
dev-oidc = ["fp-core/dev-oidc"]

[[bin]]
name = "flowplane"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
axum-server = { workspace = true }
base64 = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
fp-api = { workspace = true }
fp-core = { workspace = true }
fp-domain = { workspace = true }
fp-storage = { workspace = true }
fp-xds = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
getrandom = { workspace = true }
tracing-opentelemetry = { workspace = true }
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
