[package]
name = "fp-api"
description = "Flowplane REST surface: router, middleware, error envelope, health and metrics endpoints."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum = { workspace = true }
chrono = { workspace = true }
fp-core = { workspace = true }
fp-domain = { workspace = true }
fp-storage = { workspace = true }
metrics = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
fp-core = { workspace = true, features = ["dev-oidc"] }
http-body-util = { workspace = true }
openssl = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
tower = { workspace = true, features = ["util"] }

[lints]
workspace = true
