[package]
name = "fp-core"
description = "Flowplane core services: configuration, and (from S2) the only mutation path and authorization engine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
fp-domain = { workspace = true }
jsonwebtoken = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rsa = { workspace = true }

[lints]
workspace = true
