[package]
name = "fp-core"
description = "Flowplane core services: configuration, and (from S2) the only mutation path and authorization engine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true

[features]
# Dev-mode identity (in-process OIDC issuer). Excluded from release artifacts unless
# explicitly built in; additionally runtime-gated (spec/10 4a).
dev-oidc = ["dep:rsa"]

[dependencies]
chrono = { workspace = true }
fp-domain = { workspace = true }
fp-storage = { workspace = true }
jsonwebtoken = { workspace = true }
metrics = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
rsa = { workspace = true, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rsa = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
