[package]
name = "fp-core"
description = "Flowplane core services: configuration, and (from S2) the only mutation path and authorization engine."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[features]
# Dev-mode identity (in-process OIDC issuer). Excluded from release artifacts unless
# explicitly built in; additionally runtime-gated (spec/10 4a).
dev-oidc = ["dep:rsa"]

[dependencies]
aes-gcm = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
fp-domain = { workspace = true }
fp-storage = { workspace = true }
getrandom = { workspace = true }
jsonwebtoken = { workspace = true }
metrics = { workspace = true }
opentelemetry = { workspace = true }
tracing-opentelemetry = { workspace = true }
openssl = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
rsa = { workspace = true, optional = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
rsa = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
# Unit test: capture the egress-advisory disabled startup warning (services/egress_advisory.rs).
tracing-subscriber = { workspace = true }
# Integration test: private-CA OIDC IdP over HTTPS (tests/oidc_ca_bundle.rs).
# rcgen mints a throwaway CA + a SAN leaf cert; axum/axum-server serve the
# discovery + JWKS endpoints over rustls; jsonwebtoken/rsa sign tokens.
rcgen = "0.13"
axum = { workspace = true }
# Match the workspace feature set (no bundled crypto provider): the test installs
# the ring provider explicitly, mirroring production wiring.
axum-server = { workspace = true }
rustls = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }

[lints]
workspace = true
