[package]
name = "fp-domain"
description = "Flowplane domain model: entities, IDs, lifecycle, validation, event types. No IO."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true }

[lints]
workspace = true
