[package]
name = "fp-storage"
description = "Flowplane storage: SQLx repositories (team-scoped by construction), migrations, outbox."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
fp-domain = { workspace = true }
metrics = { workspace = true }
rustls = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true, features = ["sync", "time", "macros"] }
sqlx = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }

[lints]
workspace = true
