[package]
name = "fp-xds"
description = "Flowplane xDS: domain -> IR -> Envoy protos, ADS server, capture ingest."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
envoy-types = { workspace = true }
fp-domain = { workspace = true }
prost = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
