[package]
name = "fp-xds"
description = "Flowplane xDS: domain -> IR -> Envoy protos, ADS server, capture ingest."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license-file.workspace = true
publish.workspace = true

[dependencies]
aes-gcm = { workspace = true }
base64 = { workspace = true }
envoy-types = { workspace = true }
fp-domain = { workspace = true }
fp-storage = { workspace = true }
metrics = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde_json = { workspace = true }
sqlx = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
x509-parser = { workspace = true }

[dev-dependencies]
chrono = { workspace = true }
fp-core = { workspace = true }
sha2 = { workspace = true }

[lints]
workspace = true
